# django-xbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
example/demo/: views.py
example/example/: settings.py
examples/: manage.py
examples/config/: asgi.py  settings.py  urls.py  wsgi.py
examples/demo/: apps.py  views.py
src/django_xbench/: __init__.py  apps.py  conf.py  context.py  db.py  middleware.py  urls.py
src/django_xbench/slowagg/: __init__.py  bucket.py  compat.py  stats.py  urls.py  views.py  window.py
tests/: test_middleware.py
